ex5.02/project_v2.0/base/linkerd-manifests/broadcasterDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcaster
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broadcaster
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: broadcaster
    spec:
      containers:
      - env:
        - name: NATS_ENDPOINT
          value: nats://my-nats:4222
        - name: ENVIRON
          valueFrom:
            configMapKeyRef:
              key: ENVIRON
              name: environment-config
        - name: DISCORD_WEBHOOK_URL
          valueFrom:
            secretKeyRef:
              key: DISCORD_WEBHOOK_URL
              name: discord-webhook-secret
        image: TODO/BROADCASTER
        name: broadcaster
---
