ex5.02/project_v2.0/base/linkerd-manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  namespace: project
  name: todo-project-v2-0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: persisted-volume
          persistentVolumeClaim:
            claimName: persisted-claim
      containers:
        - name: todo-app
          imagePullPolicy: Always
          volumeMounts:
            - name: persisted-volume
              mountPath: /usr/src/app/cache
          resources:
            limits:
              cpu: "50m"
              memory: "100Mi"
          image: TODO/FRONTEND
        - name: todo-backend
          image: TODO/BACKEND
          readinessProbe:
            initialDelaySeconds:  10
            periodSeconds: 10
            httpGet:
              path: /healthz
              port: 4001
  strategy:
    canary:
      steps:
        - setWeight: 50
        - pause: {duration: 1m} 
        - analysis:
            templates:
            - templateName: cpu-usage-check
---
